Fixed display of images in metal sign page, added a project picture to MQTT script gen, and made overflow-x auto for project photos

--- a/StyleSheets/project.css
+++ b/StyleSheets/project.css
@@ -28,6 +28,7 @@ ol li{
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: auto;
 }
 
 .img-and-desc {
